atualizaçao de responsividade

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <header></header>
     <main>
-        <div></div>
-        <div class="dobro"></div>
-        <div></div>
+        <div><img src="image/pngwing.com.png" alt="">Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div>
+        <div class="dobro"><img src="image/pngwing.com.png" alt="">Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div>
+        <div><img src="image/pngwing.com.png" alt="">Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div>
     </main>
     <footer></footer>
 </body>
