--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Importa o arquivo CSS para estilizar o site -->
 </head>
 <body>
-    <header></header>
+    <header></header> <!-- Cabeçalho do site -->
     <main>
-        <div><img src="image/pngwing.com.png" alt=""><br>Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div>
-        <div class="dobro"><img src="image/pngwing.com.png" alt=""><br>Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div>
-        <div><img src="image/pngwing.com.png" alt=""><br>Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div>
+        <div><img src="image/pngwing.com.png" alt=""><br>Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div> <!-- Primeiro bloco de conteúdo -->
+        <div class="dobro"><img src="image/pngwing.com.png" alt=""><br>Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div> <!-- Segundo bloco de conteúdo com a classe "dobro" -->
+        <div><img src="image/pngwing.com.png" alt=""><br>Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div> <!-- Terceiro bloco de conteúdo -->
+        <div><img src="image/pngwing.com.png" alt=""><br>Lorem ipsum dolor sit amet. Et cumque alias eum nemo odio ea obcaecati beatae id accusamus excepturi. Et nostrum doloribus qui ipsam velit aut nobis quia eum architecto amet est tempora eaque. Ut totam culpa nam dolore itaque id soluta velit sed minus distinctio vel deleniti optio et accusamus nostrum. Qui distinctio perspiciatis eum maxime nemo eos distinctio animi et dolores corrupti ad molestiae explicabo et facilis nemo ut omnis voluptates.</div> <!-- Quarto bloco de conteúdo -->
     </main>
-    <footer></footer>
+    <footer></footer> <!-- Rodapé do site -->
 </body>
 </html>
